harcoded links in course.html. Use macros for site setup.

--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
   <footer class="footer">
     <div class="content has-text-centered">
       <p>
-	<i class="fa fa-copyright"></i> Theodoulos Garefalakis. Site built with <a href="https://www.getzola.org/">Avdou</a> and <a href="https://bulma.io/">Bulma</a>.
+	<i class="fa fa-copyright"></i> Theodoulos Garefalakis. Site built with <a href="https://github.com/tgaref/Avdou.jl">Avdou.jl</a> and <a href="https://bulma.io/">Bulma</a>.
 	Last update: {{ today }}.
       </p>
     </div>
