--- a/templates/course.html
+++ b/templates/course.html
@@ -7,27 +7,27 @@
     <div class="tabs is-toggle is-fullwidth course-tabs">
   <ul>
     <li class={{#isinfo}} "active" {{/isinfo}} {{^isinfo}} "inactive" {{/isinfo}}>
-      <a href={{{ info }}}>
+      <a href="../info/">
         <span>Πληροφοριες</span>	
       </a>
     </li>
     <li class={{#isannouncements}} "active" {{/isannouncements}} {{^isannouncements}} "inactive" {{/isannouncements}}>
-      <a href={{{ announcements }}}>
+      <a href="../announcements/">
         <span>Ανακοινωσεις</span>
       </a>
     </li>
     <li class={{#iscalendar}} "active" {{/iscalendar}} {{^iscalendar}} "inactive" {{/iscalendar}}>
-      <a href={{{ calendar }}}>
+      <a href="../calendar/">
         <span>Ημερολογιο</span>
       </a>
     </li>
     <li class={{#isassignments}} "active" {{/isassignments}} {{^isassignments}} "inactive" {{/isassignments}}>
-      <a href={{{ assignments }}}>
+      <a href="../assignments/">
         <span>Εργασιες</span>
       </a>
     </li>
     <li class={{#ismaterial}} "active" {{/ismaterial}} {{^ismaterial}} "inactive" {{/ismaterial}}>
-      <a href={{{ material }}}>
+      <a href="../material/">
         <span>Διδακτικο Υλικο</span>
       </a>
     </li>
