--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
   <link rel="stylesheet" href="{{{prefix}}}/css/default.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slideout/1.0.1/slideout.min.js"></script>
@@ -42,10 +42,16 @@
   <div class="container">
     <nav class="navbar is-transparent" role="navigation">
       <div class="navbar-brand">
-	<a href="{{{prefix}}}/" class="navbar-item">Theodoulos Garefalakis</a>
+	<a href="{{{prefix}}}/" class="navbar-item">TG</a>
       </div>
       <div class="navbar-menu">
+	<div class="navbar-start">
+	  <a class="navbar-item" href="https://orcid.org/0000-0002-3764-7874" title="ORCID" rel="external nofollow noopener" target="_blank"><i class="fa-brands fa-orcid"></i></a>
+	  <a class="navbar-item" href="https://www.researchgate.net/profile/Theodoulos-Garefalakis/" title="ResearchGate" rel="external nofollow noopener" target="_blank"><i class="fa-brands fa-researchgate"></i></a>
+	  <a class="navbar-item" href="https://scholar.google.com/citations?user=O5CqgoUAAAAJ&hl=en" title="Google Scholar" rel="external nofollow noopener" target="_blank"><i class="fa-brands fa-google-scholar"></i></a>	    
+	</div>
 	<div class="navbar-end">
+	  <a class="navbar-item" href="{{{prefix}}}/">Home</a>
 	  <a class="navbar-item" href="{{{prefix}}}/content/teaching/">Teaching</a>
 	  <a class="navbar-item" href="{{{prefix}}}/content/research/">Research</a>
 	  <a class="navbar-item" href="{{{prefix}}}/content/activities/">Activities</a>
